AP-2008-09-25-0: Bugfix:     get_ps_info - fixed PGID for hp archs.
                 Review:     JG

TB-2008-09-24-0: Enhancem.:  o Hedeby executor reload test with missing
                               sdm-test.jar reports as unsupported and not as
                               failure.
                             o Hedeby install test reports sdm-test.jar
                               problems with info mail, not unsupported mail.
                             o Summary email about test status (completed,
                               failed, etc.) now reports test failures before
                               succeeding tests.
                 Review:     RH, CR

JG-2008-09-24-0: Bugfix:     Fixed job output redirection of check
                             bugs/issuezilla/2372.
                 Review:     CR

DG-2008-09-24-1: Enhancem.:  qconf [-help] test of exit codes and if help
                             output is showed in case of no option.
                 Review:     CR

DG-2008-09-24-0: Enhancem.:  qrsub/qalter/qhold/qrls [-help] test of exit
                             codes and if help output is showed in case of
                             no option.
                 Review:     CR

TB-2008-09-23-0: Enhancem.:  o Automatically search for check_names in TS menu
                             o Enhanced features for interrupt handler
                 Review:     CR

CR-2008-09-23-0: Cleanup:    o Testsuite created log file (*.ts.log) not in TS
                               working dir if absolut path to settings file was
                               specified.
                 Review:     TB

AF-2008-09-22-0: Enhancem.:  o Added test for issue 512.
                             o Added parameter my_env to sdmadm_command.
                             o Introduced proc hedeby_get_default_env to get a default
                               SDM env.
                             o Introduced a meta variable UNSET_VAR for the