@@ -1,3 +1,6 @@
+RD-2008-09-25-0: Enhancem.:  added test for issue 2736
+                 Review:     DG
+
 AP-2008-09-25-0: Bugfix:     get_ps_info - fixed PGID for hp archs.
                  Review:     JG
 
